#

[tool.black]
line-length = 79

[tool.poetry]
name = "stonkers"
version = "0.0.1"
description = "Stonkers"
authors = ["Jason Kölker <jason@koelker.net>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jkoelker/stonkers"
repository = "https://github.com/jkoelker/stonkers"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/jkoelker/stonkers/releases"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tda-api = "^1.6.0"
pyyaml = "^6.0.0"
pandas = "^1.4.2"
tabulate = "^0.8.10"
scipy = "^1.8.1"
jinja2 = "^3.1.2"
requests = "^2.28.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3"
ipython = "^8.4.0"
datascroller = "^1.4.1"

[tool.poetry.scripts]
stonkers = "stonkers.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "Poetry.core.masonry.api"
